added to rescue html and css files

--- a/rescue.html
+++ b/rescue.html
@@ -12,6 +12,13 @@
 <h1>CAT RESCUE</h1> 
 <br>
 <br>
+<div class="cats">
+<div> <img src="https://images.unsplash.com/photo-1600020389909-2bda4d1862cd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGFuaW1hbCUyMHNoZWx0ZXJ8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" height="300px" width="400px"> </div>
+<div> <img src="https://images.unsplash.com/photo-1542736143-29a8432162bc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDZ8fGFuaW1hbCUyMHNoZWx0ZXJ8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"height="300px" width="400px"></div>
+<div> <img src="https://images.unsplash.com/photo-1667485721724-352b910795af?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTR8fGNhdHMlMjBpbiUyMHNoZWx0ZXJ8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"width ="400px" height="300px"></div>
+</div>
+
+
 <p> Since 2022, Fuzz & Foam cat rescue has been a safe haven for homeless cats. We make a promise to any cat who comes through our doors: they will never be homeless again. We hope our feline friends will find a loving home with a lifelong companion or a loving family; but if they never find that home, they are welcomed into the Fuzz & Foam family.</p> 
 <p> While our main goal is to find a responsible home for our residents, we work hard to ensure all of our furbabies recieve the level of care they need. Thanks to the help of our loyal staff and volunteers, all cats can find a loving home here. We are always looking for compassionate people to donate their time and help us in our mission to care for our residents. </p> 
 <p> In addition to being a safe haven for our feline friends, Fuzz & Foam offers free or discounted emergency medical services. We also offer low cost spay and neuter clinics to the surrounding community.</p> 
@@ -20,6 +27,19 @@
 <h1>MISSION STATEMENT</h1>
 <br>
 <p> A no kill shelter where our feline friends will be happy and healthy, while we help them find their forever homes.</p>
+
+<h2> Below are furbabies who are available for adoption</h2>
+
+<div class="adopt">
+<div> <img src="https://images.unsplash.com/photo-1583795128727-6ec3642408f8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8Y2F0c3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60" height="300px" width="400px"></div>
+<div> <img src="https://images.unsplash.com/photo-1516139008210-96e45dccd83b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NzN8fGNhdHN8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" height="300px" width="400px"></div>
+<div> <img src="https://images.unsplash.com/photo-1570117268106-8e369647c733?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OTl8fGNhdHN8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" height="300px" width="400px"></div>
+
+
+
+
+
+</div>
 
 
 
