added some code

--- a/History.html
+++ b/History.html
@@ -1,11 +1,10 @@
-<<<<<<< HEAD
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="historystyle.css">
 </head>
 <body>
     <nav class="navRow">
@@ -38,45 +37,4 @@
 
 
 </body>
-=======
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <nav class="navRow">
-        <ul>
-            <li>Home</li>
-            <li>Services</li>
-            <li>Livestream</li>
-            <li>Cat rescue</li>
-            <li>About us</li>
-            <li>Contact</li>
-        </ul>
-    </nav>
-    <div class="logo">
-        <h1>Welcome to Fuzz & Foam</h1>
-        <p>"some slogan here...."</p>
-    </div>
-
-    <div class="ParkerRow">
-        <div class="centerContent">
-            <h3>History</h3>
-            <p>Fuzz & Foam was located in Pittsfield, Massachusetts. It was established in 2022 by Parker and his friends who care deeply about cats. Parker used to live in Bangkok, Thailand for over 22 years. He witnessed some animal cruelty and pet abandonment while he was there. A lot of people who can no longer take care of their pets tend to leave those poor animals at a temple, hoping that monks would look after them. Parker wanted to make a difference in this world. Every time he goes to pay respect to the statue of the lord buddha at his local temple, he would look around for those abandoned animals, especially cats. He would ask the monk if he can take them home to care for them. The monks there really appreciate Parker’s kindness. <a href="https://medium.com/pixel-magazine/the-abandoned-animals-who-are-adopted-by-buddhist-monks-54a642ea75dc">Read more</a>
-            </p>
-            <div class="abandonedCats">
-                <img src="https://media.istockphoto.com/id/1295668419/photo/several-red-stray-cats-sleep-near-a-garbage-can.jpg?s=612x612&w=0&k=20&c=ZSOI8nL2tXEZzjZtw2SvwSjZy-9KJR_BGSV0hWCRjDU=" alt="abandoned cats">
-            </div>
-            <p>After moving to the United States in May 2011, Parker went to an ABC community college to obtain his license as a veterinarian technician. While attending college, he volunteered at the animal shelter every week. Upon his graduation, he and his friends decided to start their own business in Berkshire to care for cats. </p>
-        </div>
-    </div>
-
-
-
-</body>
->>>>>>> bed6ef9d1a326d8563ba8542600c5390116cad5c
 </html>
