--- a/History.html
+++ b/History.html
@@ -13,27 +13,64 @@
             <li>Services</li>
             <li>Livestream</li>
             <li>Cat rescue</li>
-            <li>About us</li>
+            <li> <a href="http://127.0.0.1:5501/History.html">About us</a></li>
             <li>Contact</li>
         </ul>
     </nav>
     <div class="logo">
         <h1>Welcome to Fuzz & Foam</h1>
-        <p>"some slogan here...."</p>
+        <p>" Once we're done, you'll not recognize it. "</p>
     </div>
 
     <div class="ParkerRow">
+        <h1>About Us</h1>
+        <br>
+        <br>
         <div class="centerContent">
-            <h3>History</h3>
-            <p>Fuzz & Foam was located in Pittsfield, Massachusetts. It was established in 2022 by Parker and his friends who care deeply about cats. Parker used to live in Bangkok, Thailand for over 22 years. He witnessed some animal cruelty and pet abandonment while he was there. A lot of people who can no longer take care of their pets tend to leave those poor animals at a temple, hoping that monks would look after them. Parker wanted to make a difference in this world. Every time he goes to pay respect to the statue of the lord buddha at his local temple, he would look around for those abandoned animals, especially cats. He would ask the monk if he can take them home to care for them. The monks there really appreciate Parker’s kindness. <a href="https://medium.com/pixel-magazine/the-abandoned-animals-who-are-adopted-by-buddhist-monks-54a642ea75dc">Read more</a>
-            </p>
-            <div class="abandonedCats">
-                <img src="https://media.istockphoto.com/id/1295668419/photo/several-red-stray-cats-sleep-near-a-garbage-can.jpg?s=612x612&w=0&k=20&c=ZSOI8nL2tXEZzjZtw2SvwSjZy-9KJR_BGSV0hWCRjDU=" alt="abandoned cats">
+            <div class="aboutUsRow">
+                <div class="Box">
+                    <div class="abandonedCats">
+                        <img src="https://media.istockphoto.com/id/1295668419/photo/several-red-stray-cats-sleep-near-a-garbage-can.jpg?s=612x612&w=0&k=20&c=ZSOI8nL2tXEZzjZtw2SvwSjZy-9KJR_BGSV0hWCRjDU=" alt="abandoned cats" width="500px" height="350px">
+                    </div>
+                </div>
+                <div class="Box">
+                    <h2>Personalized Approach</h2>
+                    <p>Fuzz & Foam is a locally owned cat grooming business based in Pittsfield, MA servicing throughout Berkshire County. We provide fast, high quality, and affordable services to each client. Whether you are looking for bathing, hair combing, claw trimming and cleaning the eyes and ears for you beloved cats, our team can deliver excellent grooming experience including most very difficult cats with a soothing energy.
+                    </p>
+                </div>
             </div>
-            <p>After moving to the United States in May 2011, Parker went to an ABC community college to obtain his license as a veterinarian technician. While attending college, he volunteered at the animal shelter every week. Upon his graduation, he and his friends decided to start their own business in Berkshire to care for cats. </p>
+
+            <br>
+        
+
+            <div class="aboutUsRow">
+                <div class="Box">
+                    <h2>Our History</h2>
+                    <p>Fuzz & Foam was established in 2022 by Parker and his friends who care deeply about cats. Parker used to live in Bangkok, Thailand for over 22 years. He witnessed some animal cruelty and pet abandonment while he was there. A lot of people who can no longer take care of their pets tend to leave those poor animals at a temple, hoping that monks would look after them. Parker wanted to make a difference in this world. Every time he goes to pay respect to the statue of the lord buddha at his local temple, he would look around for those abandoned animals, especially cats. He would ask the monk if he can take them home to care for them. The monks there really appreciate Parker’s kindness. <a href="https://medium.com/pixel-magazine/the-abandoned-animals-who-are-adopted-by-buddhist-monks-54a642ea75dc">Read more</a>
+                </p>
+                </div>
+                <div class="Box">
+                    <div class="abandonedCats">
+                        <img src="https://miro.medium.com/max/1400/1*Ppgv1ejIZqL-C_q83lp5xg.webp" alt="abandoned cats" width="500px" height="350px">
+                    </div>
+                </div>
+            </div>
         </div>
+        
     </div>
 
+    <div class="employmentRow">
+        <h3> <span> employment opportunity</span>: Fuzz & Foam is currently looking for professional pet groomers </h3>
+        <h3>Full and Part-time. Please Call Parker at 123-456-7890</h3>
+        <br>
+
+        <h3>Get a special discount for first-time customers</h3>
+        <h3>Call Fuzz & Foam today to find out more</h3>
+    </div>
+
+    <div class="bottomRow">
+        <h3>-------<span>call now</span> : 123.456.7890-------</h3>
+    </div>
 
 
 </body>
