added some more html and css code

--- a/History.html
+++ b/History.html
@@ -70,6 +70,9 @@
 
     <div class="bottomRow">
         <h3>-------<span>call now</span> : 123.456.7890-------</h3>
+        <br>
+        <p>Keep in touch with us on Facebook</p>
+        <p>2022 Fuzz & Foam, Pittsfield, Massachusetts</p>
     </div>
 
 
