--- a/rescue.html
+++ b/rescue.html
@@ -31,9 +31,30 @@
 <h2> Below are furbabies who are available for adoption</h2>
 
 <div class="adopt">
-<div> <img src="https://images.unsplash.com/photo-1583795128727-6ec3642408f8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8Y2F0c3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60" height="300px" width="400px"></div>
-<div> <img src="https://images.unsplash.com/photo-1516139008210-96e45dccd83b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NzN8fGNhdHN8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" height="300px" width="400px"></div>
-<div> <img src="https://images.unsplash.com/photo-1570117268106-8e369647c733?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OTl8fGNhdHN8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" height="300px" width="400px"></div>
+<div> <img src="https://images.unsplash.com/photo-1583795128727-6ec3642408f8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8Y2F0c3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60" height="100px" width="100px"></div>
+<div> <img src="https://images.unsplash.com/photo-1516139008210-96e45dccd83b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NzN8fGNhdHN8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" height="100px" width="100px"></div>
+<div> <img src="https://images.unsplash.com/photo-1570117268106-8e369647c733?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OTl8fGNhdHN8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" height="100px" width="
+    100px"></div>
+</div>
+
+<div class="kitten">
+<div> <img src="https://images.unsplash.com/photo-1592194996308-7b43878e84a6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2F0c3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60"height="100px" width="100">
+</div>
+<div> <img src="https://images.unsplash.com/photo-1574231164645-d6f0e8553590?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGNhdHN8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" height="100px" width="100px">
+</div>
+<div> <img src="https://images.unsplash.com/flagged/photo-1557427161-4701a0fa2f42?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjN8fGNhdHN8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" height="100px" width="100px">
+</div>
+</div>
+<div class="cat"> 
+    <div> <img src="https://images.unsplash.com/photo-1606214174585-fe31582dc6ee?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" height="100px" width="100px">
+</div>
+<div> <img src="https://images.unsplash.com/photo-1536589961747-e239b2abbec2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzV8fGNhdHN8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" height="100px" width="100px">
+</div>
+<div> <img src="https://images.unsplash.com/photo-1455970022149-a8f26b6902dd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDF8fGNhdHN8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" height="100px" width="100px">
+</div>
+
+</div>
+
 
 
 
