--- a/staffpage.html
+++ b/staffpage.html
@@ -8,8 +8,32 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Staff</h1>
-<h2>Here at Fuzz & Foam we like to recognize our employees based on their hard work and dedication to the company and its values.</h2>
+    <nav class="navbar">
+        <div class="logo"><h3>F & F Cafe & Grooming</h3></div>
+        <ul class="nav-links">
+          <div class="lists">
+            <li class="home"><a href="">Home</a></li>
+            <li class="about"><a href="">About</a></li>
+            <li class="rescue"><a href="/rescue.html">Cat Rescue</a></li>
+            <li class="livestream"><a href="">Livestream</a></li>
+            <li class="service"><a href="">Service</a></li>
+            <li class="contact"><a href="/staffpage.html">Contact</a>
+            <ul class="staff-list">
+              <li><a href="">Jarae</a></li>
+              <li><a href="">Matthew</a></li>
+              <li><a href="">Parkpoom</a></li>
+              <li><a href="">Brienne</a></li>
+              <li><a href="">Haseong</a></li>
+              <li><a href="">Neffertti</a></li>
+            </ul>
+            </li>
+          </div>
+        </ul>
+      </nav>
+   <h1>Staff</h1>
+   <br>
+<center><h2>Here at Fuzz & Foam we like to recognize our employees based on their hard work and dedication to the company and its values.</h2></center>
+<br>
         <div class="Staff">
             <div>
               <p>
@@ -51,6 +75,7 @@
                         <img src="/images/blank-profile-picture-973460_640.png" alt="user profile blank"width=400px>
                     </div>
             </div>
-        </body>
+        
+                 
 </body>
 </html>
