--- a/rescue.html
+++ b/rescue.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" href="rescue.css">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="logo"><h3>F & F Cafe & Grooming</h3></div>
+        <ul class="nav-links">
+          <div class="lists">
+            <li class="home"><a href="">Home</a></li>
+            <li class="about"><a href="">About</a></li>
+            <li class="rescue"><a href="/rescue.html">Cat Rescue</a></li>
+            <li class="livestream"><a href="">Livestream</a></li>
+            <li class="service"><a href="">Service</a></li>
+            <li class="contact"><a href="/staffpage.html">Contact</a>
+            <ul class="staff-list">
+              <li><a href="">Jarae</a></li>
+              <li><a href="">Matthew</a></li>
+              <li><a href="">Parkpoom</a></li>
+              <li><a href="">Brienne</a></li>
+              <li><a href="">Haseong</a></li>
+              <li><a href="">Neffertti</a></li>
+            </ul>
+            </li>
+          </div>
+        </ul>
+      </nav>
+      <br>
+      <br>
   
 <h1>CAT RESCUE</h1> 
 <br>
@@ -27,9 +51,10 @@
 <h1>MISSION STATEMENT</h1>
 <br>
 <p> A no kill shelter where our feline friends will be happy and healthy, while we help them find their forever homes.</p>
-
+<br>
 <h2> Below are furbabies who are available for adoption</h2>
-
+<br>
+<br>
 <div class="adopt">
 <div> <img src="https://images.unsplash.com/photo-1583795128727-6ec3642408f8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8Y2F0c3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60" height="100px" width="100px"></div>
 <div> <img src="https://images.unsplash.com/photo-1516139008210-96e45dccd83b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NzN8fGNhdHN8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" height="100px" width="100px"></div>
@@ -60,7 +85,7 @@
 
 
 
-</div>
+
 
 
 
