Added more html and css code

--- a/staffpage.html
+++ b/staffpage.html
@@ -26,9 +26,10 @@
         </div>
             <div>
                 <p>
-                    Parkpoom Seesangrit
+                    <a href="/ParkpoomProfile.html">Parkpoom Seesangrit</a>
                 </p>
-                <img src="/images/blank-profile-picture-973460_640.png" alt="user profile blank"width=400px>
+                
+                <a href="/ParkpoomProfile.html"><img src="/images/Park.png" alt="user profile blank"width="400px" height="400px"></a>
             </div>
             </div>
             <div class="staff2">
