--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <ul class="nav-links">
       <div class="lists">
         <li class="home"><a href="">Home</a></li>
-        <li class="about"><a href="">About</a></li>
+        <li class="about"><a href="/History.html">About</a></li>
         <li class="rescue"><a href="/rescue.html">Cat Rescue</a></li>
         <li class="livestream"><a href="">Livestream</a></li>
         <li class="service"><a href="">Service</a></li>
@@ -21,7 +21,7 @@
         <ul class="staff-list">
           <li><a href="">Jarae</a></li>
           <li><a href="">Matthew</a></li>
-          <li><a href="">Parkpoom</a></li>
+          <li><a href="ParkpoomProfile.html">Parkpoom</a></li>
           <li><a href="">Brienne</a></li>
           <li><a href="">Haseong</a></li>
           <li><a href="">Neffertti</a></li>
