--- a/livestream.html
+++ b/livestream.html
@@ -13,7 +13,7 @@
     <ul class="nav-links">
       <div class="lists">
         <li class="home"><a href="">Home</a></li>
-        <li class="about"><a href="">About</a></li>
+        <li class="about"><a href="/History.html">About</a></li>
         <li class="rescue"><a href="/rescue.html">Cat Rescue</a></li>
         <li class="livestream"><a href="">Livestream</a></li>
         <li class="service"><a href="">Service</a></li>
