--- a/History.html
+++ b/History.html
@@ -19,10 +19,34 @@
         </ul>
     </nav>
 -->
-    <div class="logo">
+<nav class="navbar">
+    <div class="logo"><h3>F & F Cafe & Grooming</h3></div>
+    <ul class="nav-links">
+      <div class="lists">
+        <li class="home"><a href="">Home</a></li>
+        <li class="about"><a href="/History.html">About</a></li>
+        <li class="rescue"><a href="/rescue.html">Cat Rescue</a></li>
+        <li class="livestream"><a href="">Livestream</a></li>
+        <li class="service"><a href="">Service</a></li>
+        <li class="contact"><a href="/staffpage.html">Contact</a>
+        <ul class="staff-list">
+          <li><a href="">Jarae</a></li>
+          <li><a href="">Matthew</a></li>
+          <li><a href="ParkpoomProfile.html">Parkpoom</a></li>
+          <li><a href="">Brienne</a></li>
+          <li><a href="">Haseong</a></li>
+          <li><a href="">Neffertti</a></li>
+        </ul>
+        </li>
+      </div>
+    </ul>
+  </nav>
+  <!--
+        <div class="logo">
         <h1>Welcome to Fuzz & Foam</h1>
         <p>" Once we're done, you'll not recognize it. "</p>
     </div>
+-->
 
     <div class="ParkerRow">
         <h1>About Us</h1>
@@ -37,6 +61,7 @@
                 </div>
                 <div class="Box">
                     <h2>Personalized Approach</h2>
+                    <br><br>
                     <p>Fuzz & Foam is a locally owned cat grooming business based in Pittsfield, MA servicing throughout Berkshire County. We provide fast, high quality, and affordable services to each client. Whether you are looking for bathing, hair combing, claw trimming and cleaning the eyes and ears for you beloved cats, our team can deliver excellent grooming experience including most very difficult cats with a soothing energy.
                     </p>
                 </div>
@@ -48,6 +73,7 @@
             <div class="aboutUsRow">
                 <div class="Box">
                     <h2>Our History</h2>
+                    <br><br>
                     <p>Fuzz & Foam was established in 2022 by Parker and his friends who care deeply about cats. Parker used to live in Bangkok, Thailand for over 22 years. He witnessed some animal cruelty and pet abandonment while he was there. A lot of people who can no longer take care of their pets tend to leave those poor animals at a temple, hoping that monks would look after them. Parker wanted to make a difference in this world. Every time he goes to pay respect to the statue of the lord buddha at his local temple, he would look around for those abandoned animals, especially cats. He would ask the monk if he can take them home to care for them. The monks there really appreciate Parker’s kindness. <a href="https://medium.com/pixel-magazine/the-abandoned-animals-who-are-adopted-by-buddhist-monks-54a642ea75dc">Read more</a>
                 </p>
                 </div>
