navbar and profile links updated in staffpage.html

--- a/staffpage.html
+++ b/staffpage.html
@@ -12,16 +12,16 @@
         <div class="logo"><h3>F & F Cafe & Grooming</h3></div>
         <ul class="nav-links">
           <div class="lists">
-            <li class="home"><a href="">Home</a></li>
-            <li class="about"><a href="">About</a></li>
+            <li class="home"><a href="/home.html">Home</a></li>
+            <li class="about"><a href="/History.html">About</a></li>
             <li class="rescue"><a href="/rescue.html">Cat Rescue</a></li>
-            <li class="livestream"><a href="">Livestream</a></li>
+            <li class="livestream"><a href="/livestream.html">Livestream</a></li>
             <li class="service"><a href="">Service</a></li>
             <li class="contact"><a href="/staffpage.html">Contact</a>
             <ul class="staff-list">
               <li><a href="">Jarae</a></li>
-              <li><a href="">Matthew</a></li>
-              <li><a href="">Parkpoom</a></li>
+              <li><a href="/Matthew.html">Matthew</a></li>
+              <li><a href="/ParkpoomProfile.html">Parkpoom</a></li>
               <li><a href="">Brienne</a></li>
               <li><a href="">Haseong</a></li>
               <li><a href="">Neffertti</a></li>
@@ -44,9 +44,9 @@
     
         <div>
             <p>
-                Matthew Cassidy
+                <a href="/Matthew.html">Matthew Cassidy</a>
             </p>
-            <img src="/images/blank-profile-picture-973460_640.png" alt="user profile blank"width=400px>
+            <a href="/Matthew.html"><img src="/images/blank-profile-picture-973460_640.png" alt="user profile blank"width=400px></a>
         </div>
             <div>
                 <p>
