--- a/History.html
+++ b/History.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>history</title>
-    <link rel="stylesheet" href="historystyle.css">
+    <link rel="stylesheet" href="historyStyle.css">
 </head>
 <body>
 <!--
@@ -23,15 +23,15 @@
     <div class="logo"><h3>F & F Cafe & Grooming</h3></div>
     <ul class="nav-links">
       <div class="lists">
-        <li class="home"><a href="">Home</a></li>
+        <li class="home"><a href="/home.html">Home</a></li>
         <li class="about"><a href="/History.html">About</a></li>
         <li class="rescue"><a href="/rescue.html">Cat Rescue</a></li>
-        <li class="livestream"><a href="">Livestream</a></li>
+        <li class="livestream"><a href="/livestream.html">Livestream</a></li>
         <li class="service"><a href="">Service</a></li>
         <li class="contact"><a href="/staffpage.html">Contact</a>
         <ul class="staff-list">
           <li><a href="">Jarae</a></li>
-          <li><a href="">Matthew</a></li>
+          <li><a href="/Matthew.html">Matthew</a></li>
           <li><a href="ParkpoomProfile.html">Parkpoom</a></li>
           <li><a href="">Brienne</a></li>
           <li><a href="">Haseong</a></li>
