--- a/ParkpoomProfile.html
+++ b/ParkpoomProfile.html
@@ -3,11 +3,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Parkpoom Seesangrit</title>
     <link rel="stylesheet" href="ParkpoomProfile.css">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="logo"><h3>F & F Cafe & Grooming</h3></div>
+        <ul class="nav-links">
+          <div class="lists">
+            <li class="home"><a href="/home.html">Home</a></li>
+            <li class="about"><a href="/History.html">About</a></li>
+            <li class="rescue"><a href="/rescue.html">Cat Rescue</a></li>
+            <li class="livestream"><a href="/livestream.html">Livestream</a></li>
+            <li class="service"><a href="">Service</a></li>
+            <li class="contact"><a href="/staffpage.html">Contact</a>
+            <ul class="staff-list">
+              <li><a href="">Jarae</a></li>
+              <li><a href="">Matthew</a></li>
+              <li><a href="ParkpoomProfile.html">Parkpoom</a></li>
+              <li><a href="">Brienne</a></li>
+              <li><a href="">Haseong</a></li>
+              <li><a href="">Neffertti</a></li>
+            </ul>
+            </li>
+          </div>
+        </ul>
+      </nav>    
     <div class="profileRow">
         <div class="contentCenter">
             <div class="pix">
