updated M profile, links

--- a/Matthew.html
+++ b/Matthew.html
@@ -13,15 +13,15 @@
     <ul class="nav-links">
       <div class="lists">
         <li class="home"><a href="/home.html">Home</a></li>
-        <li class="about"><a href="">About</a></li>
+        <li class="about"><a href="/History.html">About</a></li>
         <li class="rescue"><a href="/rescue.html">Cat Rescue</a></li>
-        <li class="livestream"><a href="">Livestream</a></li>
+        <li class="livestream"><a href="/livestream.html">Livestream</a></li>
         <li class="service"><a href="">Service</a></li>
         <li class="contact"><a href="/staffpage.html">Contact</a>
         <ul class="staff-list">
           <li><a href="">Jarae</a></li>
           <li><a href="">Matthew</a></li>
-          <li><a href="">Parkpoom</a></li>
+          <li><a href="/ParkpoomProfile.html">Parkpoom</a></li>
           <li><a href="">Brienne</a></li>
           <li><a href="">Haseong</a></li>
           <li><a href="">Neffertti</a></li>
@@ -30,3 +30,28 @@
       </div>
     </ul>
   </nav>
+  <div class="profileRow">
+    <div class="contentCenter">
+        <div class="pix">
+            <img src="https://i.ibb.co/MPxsStd/IMG-20180105-210835-2-exported-1673462629712.jpg" alt="Winston and Felicia" width="420px" height="330px">
+        </div>
+
+        <div class="profile">
+            <div class="title">
+                <H2>M.R.M. Cassidy, MSLIS</H2>
+            </div>
+            <div class="content">
+                <h3>Co-Founder</h3>
+                <p>Phone: 123-456-7890</p>
+                <p>Email: <a href="mailto:cassidy@giantlibrarian.com">cassidy@giantlibrarian.com</a></p>
+                <br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda ab, reiciendis, dignissimos rerum necessitatibus aperiam omnis vitae maiores, neque earum aliquam. Itaque laudantium quaerat et eum laboriosam illo dolor minus.</p>
+            </div>
+            
+        </div>
+        
+    </div>
+</div>
+
+</body>
+</html>
