--- a/livestream.html
+++ b/livestream.html
@@ -20,8 +20,8 @@
         <li class="contact"><a href="/staffpage.html">Contact</a>
         <ul class="staff-list">
           <li><a href="">Jarae</a></li>
-          <li><a href="">Matthew</a></li>
-          <li><a href="">Parkpoom</a></li>
+          <li><a href="/Matthew.html">Matthew</a></li>
+          <li><a href="/ParkpoomProfile.html">Parkpoom</a></li>
           <li><a href="">Brienne</a></li>
           <li><a href="">Haseong</a></li>
           <li><a href="">Neffertti</a></li>
