--- a/staffpage.html
+++ b/staffpage.html
@@ -44,7 +44,7 @@
                 Jarae Moultrie
             </p> 
             
-            <img src="/images/blank-profile-picture-973460_640.png" alt="user profile blank"width=400px>
+            <img src="/images/IMG_0636.jpg" alt="Jarae"width=400px>
             </div>
     
         <div>
@@ -59,7 +59,7 @@
                     <a href="/ParkpoomProfile.html">Parkpoom Seesangrit</a>
                 </p>
                 <br>
-                <a href="/ParkpoomProfile.html"><img src="/images/Park.png" alt="user profile blank"width="400px" height="400px"></a>
+                <a href="/ParkpoomProfile.html"><img src="/images/Park.png" alt="Park"width="400px" height="400px"></a>
             </div>
         </div>
             <div class="staff2">
