--- a/staffpage.html
+++ b/staffpage.html
@@ -73,7 +73,7 @@
                         <p>
                             Neffertti Sims
                         </p>  
-                        <img src="/images/blank-profile-picture-973460_640.png" alt="user profile blank"width=400px>
+                        <img src="/images/Neff.png" alt="user profile blank" width=400px height="400px" >
                     </div>
             </div>
         
