--- a/rescue.html
+++ b/rescue.html
@@ -87,7 +87,7 @@
 <br>
 <p>  Animal shelters save countless lives by providing shelter to animals who would otherwise be euthanized. They also provide a place for animals to stay while waiting for their new home or until their owner can bring them back. In addition, animal shelters provide education about animals and the importance of responsible pet ownership. This makes them an important part of the community.</p>
 <br>
-<p>Below you find a short video about animal shelters.</p>
+<p>Below you will find a short video about animal shelters.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/3iS0gbderDU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
 
