--- a/staffpage.html
+++ b/staffpage.html
@@ -53,14 +53,14 @@
                 <a href="/Matthew.html">Matthew Cassidy</a>
             </p>
             <br>
-            <a href="/Matthew.html"><img src="https://i.ibb.co/Z8YWLmy/PXL-20220710-210646350.jpg" alt="M Cassidy" height="400px"></a>
+            <a href="/Matthew.html"><img src="https://i.ibb.co/Z8YWLmy/PXL-20220710-210646350.jpg" alt="M Cassidy" width="400px"></a>
         </div>
             <div>
                 <p>
                     <a href="/ParkpoomProfile.html">Parkpoom Seesangrit</a>
                 </p>
                 <br>
-                <a href="/ParkpoomProfile.html"><img src="/images/Park.png" alt="Park"width="400px" height="400px"></a>
+                <a href="/ParkpoomProfile.html"><img src="/images/Park.png" alt="Park"width="400px"></a>
             </div>
         </div>
             <div class="staff2">
