--- a/staffpage.html
+++ b/staffpage.html
@@ -60,7 +60,7 @@
                     <a href="/ParkpoomProfile.html">Parkpoom Seesangrit</a>
                 </p>
                 <br>
-                <a href="/ParkpoomProfile.html"><img src="/images/Park.png" alt="Park"width="400px"></a>
+                <a href="/ParkpoomProfile.html"><img src="/images/Park.png" alt="Park" width="400px"></a>
             </div>
         </div>
             <div class="staff2">
@@ -82,7 +82,7 @@
                         <p>
                             Neffertti Sims
                         </p>  
-                        <img src="/images/Neff.png" alt="user profile blank" width=400px height="400px">
+                        <img src="/images/Neff.png" alt="user profile blank" width=400px >
                         
                         
                     </div>
