4th commit styling button and add prof image

--- a/staffpage.html
+++ b/staffpage.html
@@ -76,7 +76,7 @@
                         Haseong Jang
                     </p> 
                     
-                    <img src="/images/blank-profile-picture-973460_640.png" alt="user profile blank"width=400px>
+                    <img src="/images/Profile_Haseong_Jang_7.JPG" alt="user profile blank"width=400px>
                 </div>
                     <div>
                         <p>
