--- a/home.html
+++ b/home.html
@@ -77,7 +77,7 @@
         <span onclick="document.getElementById('rescue-request').style.display='none'" class="close" title="Close Modal">&times;</span>
         <form action="/action_page.php" class="rescue-request-content">
           <div class="container">
-            <h1>Sign Up</h1>
+            <h1>Rescue Request</h1>
             <p>Please fill out the necessary information</p>
             <hr>
             <label for="email"><b>Email</b></label>
