--- a/home.html
+++ b/home.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -73,9 +72,9 @@
     </div>
     <div>
       <button onclick="document.getElementById('rescue-request').style.display='block'" style="width:auto;">Rescue Request</button>
-      <div id="rescue-request" class="rescue">
+      <div id="rescue-request" class="rescuebutton">
         <span onclick="document.getElementById('rescue-request').style.display='none'" class="close" title="Close Modal">&times;</span>
-        <form action="/action_page.php" class="rescue-request-content">
+        <form action="/action_page.php" class="rescuebutton-request-content">
           <div class="container">
             <h1>Rescue Request</h1>
             <p>Please fill out the necessary information</p>
