updated links that formerly pointed to home.html to now point to index.html

--- a/ParkpoomProfile.html
+++ b/ParkpoomProfile.html
@@ -11,7 +11,7 @@
         <div class="logo"><h3>F & F Cafe & Grooming</h3></div>
         <ul class="nav-links">
           <div class="lists">
-            <li class="home"><a href="/home.html">Home</a></li>
+            <li class="home"><a href="/index.html">Home</a></li>
             <li class="about"><a href="/History.html">About</a></li>
             <li class="rescue"><a href="/rescue.html">Cat Rescue</a></li>
             <li class="livestream"><a href="/livestream.html">Livestream</a></li>
