--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul class="nav-links">
       <div class="lists">
         <li class="home"><a href="">Home</a></li>
-        <li class="about"><a href="/History.html">About</a></li>
+        <li class="about"><a href="/Fuzz-Foam/History.html">About</a></li>
         <li class="rescue"><a href="/rescue.html">Cat Rescue</a></li>
         <li class="livestream"><a href="/livestream.html">Livestream</a></li>
         <li class="service"><a href="">Service</a></li>
