--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       <div class="lists">
         <li class="home"><a href="">Home</a></li>
         <li class="about"><a href="/Fuzz-Foam/History.html">About</a></li>
-        <li class="rescue"><a href="/rescue.html">Cat Rescue</a></li>
-        <li class="livestream"><a href="/livestream.html">Livestream</a></li>
+        <li class="rescue"><a href="/Fuzz-Foam/rescue.html">Cat Rescue</a></li>
+        <li class="livestream"><a href="/Fuzz-Foam/livestream.html">Livestream</a></li>
         <li class="service"><a href="">Service</a></li>
-        <li class="contact"><a href="/staffpage.html">Contact</a>
+        <li class="contact"><a href="/Fuzz-Foam/staffpage.html">Contact</a>
         <ul class="staff-list">
           <li><a href="">Jarae</a></li>
-          <li><a href="/Matthew.html">Matthew</a></li>
-          <li><a href="ParkpoomProfile.html">Parkpoom</a></li>
+          <li><a href="/Fuzz-Foam/Matthew.html">Matthew</a></li>
+          <li><a href="/Fuzz-Foam/ParkpoomProfile.html">Parkpoom</a></li>
           <li><a href="">Brienne</a></li>
           <li><a href="">Haseong</a></li>
           <li><a href="">Neffertti</a></li>
