5th commit added cat images and styling

--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
       <div class="flip-card">
         <div class="flip-card-front">F</div>
         <div class="flip-card-back">
-          <img src="" alt="">
+          <!-- <img src="" alt=""> -->
         </div>
       </div>
     </div>
@@ -42,7 +42,7 @@
       <div class="flip-card">
         <div class="flip-card-front-1">U</div>
         <div class="flip-card-back-1">
-          <img src="" alt="">
+          <img src="images/cat_2.jpeg" alt="cat-image">
         </div>
       </div>
     </div>
@@ -50,7 +50,7 @@
       <div class="flip-card">
         <div class="flip-card-front-2">Z</div>
         <div class="flip-card-back-2">
-          <img src="" alt="">
+          <!-- <img src="" alt=""> -->
         </div>
       </div>
     </div>
@@ -58,7 +58,7 @@
       <div class="flip-card">
         <div class="flip-card-front-3">Z</div>
         <div class="flip-card-back-3">
-          <img src="" alt="">
+          <!-- <img src="" alt=""> -->
         </div>
       </div>
     </div>
@@ -70,6 +70,7 @@
         <div class="flip-card-back">&</div>
       </div>
     </div>
+    <!-- Rescue request btn -->
     <div>
       <button onclick="document.getElementById('rescue-request').style.display='block'" style="width:auto;">Rescue Request</button>
       <div id="rescue-request" class="rescuebutton">
@@ -100,7 +101,7 @@
       <div class="flip-card">
         <div class="flip-card-front-1">F</div>
         <div class="flip-card-back-1">
-          <img src="" alt="">
+          <img src="/images/Cat_3.jpeg" alt="cat-image">
         </div>
       </div>
     </div>
@@ -108,14 +109,15 @@
       <div class="flip-card">
         <div class="flip-card-front-2">O</div>
         <div class="flip-card-back-2">
-          <img src="" alt=""></div>
+          <!-- <img src="" alt=""> -->
+        </div>
       </div>
     </div>
     <div class="flip-card-container">
       <div class="flip-card">
         <div class="flip-card-front-3">A</div>
         <div class="flip-card-back-3">
-          <img src="" alt="">
+          <!-- <img src="" alt=""> -->
         </div>
       </div>
     </div>
@@ -123,7 +125,7 @@
       <div class="flip-card">
         <div class="flip-card-front">M</div>
         <div class="flip-card-back">
-          <img src="" alt="">
+          <img src="/images/cat_1.jpeg" alt="cat-image">
         </div>
       </div>
     </div>
