--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="flip-card">
         <div class="flip-card-front">F</div>
         <div class="flip-card-back">
-          <img src="" alt="">
+          <!--<img src="" alt="">-->
         </div>
       </div>
     </div>
@@ -42,7 +42,7 @@
       <div class="flip-card">
         <div class="flip-card-front-1">U</div>
         <div class="flip-card-back-1">
-          <img src="" alt="">
+          <img src="/Fuzz-Foam/images/cat_2.jpeg" alt="cat-image">
         </div>
       </div>
     </div>
