--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="flip-card">
         <div class="flip-card-front-2">Z</div>
         <div class="flip-card-back-2">
-          <img src="" alt="">
+          <!--<img src="" alt="">-->
         </div>
       </div>
     </div>
@@ -58,7 +58,7 @@
       <div class="flip-card">
         <div class="flip-card-front-3">Z</div>
         <div class="flip-card-back-3">
-          <img src="" alt="">
+          <!--<img src="" alt="">-->
         </div>
       </div>
     </div>
@@ -70,6 +70,7 @@
         <div class="flip-card-back">&</div>
       </div>
     </div>
+    <!-- Rescue request btn-->
     <div>
       <button onclick="document.getElementById('rescue-request').style.display='block'" style="width:auto;">Rescue Request</button>
       <div id="rescue-request" class="rescuebutton">
@@ -100,7 +101,7 @@
       <div class="flip-card">
         <div class="flip-card-front-1">F</div>
         <div class="flip-card-back-1">
-          <img src="" alt="">
+          <img src="/Fuzz-Foam/images/Cat_3.jpeg" alt="cat-image">
         </div>
       </div>
     </div>
@@ -108,14 +109,14 @@
       <div class="flip-card">
         <div class="flip-card-front-2">O</div>
         <div class="flip-card-back-2">
-          <img src="" alt=""></div>
+          <!--<img src="" alt=""></div>-->
       </div>
     </div>
     <div class="flip-card-container">
       <div class="flip-card">
         <div class="flip-card-front-3">A</div>
         <div class="flip-card-back-3">
-          <img src="" alt="">
+          <!--<img src="" alt="">-->
         </div>
       </div>
     </div>
@@ -123,7 +124,7 @@
       <div class="flip-card">
         <div class="flip-card-front">M</div>
         <div class="flip-card-back">
-          <img src="" alt="">
+          <img src="/Fuzz-Foam/images/cat_1.jpeg" alt="cat-image">
         </div>
       </div>
     </div>
