home/index mirroring div fix

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
       <div class="flip-card">
         <div class="flip-card-front-2">O</div>
         <div class="flip-card-back-2">
-          <!--<img src="" alt=""></div>-->
+          <!--<img src="" alt="">-->
+        </div>
       </div>
     </div>
     <div class="flip-card-container">
