updated profile, image links

--- a/Matthew.html
+++ b/Matthew.html
@@ -45,7 +45,7 @@
                 <p>Phone: 123-456-7890</p>
                 <p>Email: <a href="mailto:cassidy@giantlibrarian.com">cassidy@giantlibrarian.com</a></p>
                 <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda ab, reiciendis, dignissimos rerum necessitatibus aperiam omnis vitae maiores, neque earum aliquam. Itaque laudantium quaerat et eum laboriosam illo dolor minus.</p>
+                <p>Hello! These are my cats Winston & Felicia, both are named after superheroes (Deadpool and Black Cat respectively) and are brother and sister. Winston & Felicia are rescues from the <a href="https://mohawkhumane.org/">Mohawk Hudson Humane Society in Menands, NY.<a/></p>
             </div>
             
         </div>
