--- a/ParkpoomProfile.html
+++ b/ParkpoomProfile.html
@@ -32,7 +32,7 @@
     <div class="profileRow">
         <div class="contentCenter">
             <div class="pix">
-                <img src="/images/Singha.jpg" alt="singha" width="420px" height="330px">
+                <img src="/Fuzz-Foam/images/Singha.jpg" alt="singha" width="420px" height="330px">
             </div>
     
             <div class="profile">
